parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> prog
Rule 2     prog -> functions main functions
Rule 3     prog -> functions main
Rule 4     prog -> main functions
Rule 5     prog -> main
Rule 6     prog -> functions
Rule 7     functions -> functions function
Rule 8     functions -> function
Rule 9     return -> RETURN expression SEMI
Rule 10    return -> RETURN SEMI
Rule 11    expression -> RETURN expression
Rule 12    expression -> RETURN
Rule 13    function -> FUNCTIONDEF NAME LPAREN param RPAREN LBRA linst RBRA
Rule 14    function -> FUNCTIONDEF NAME LPAREN RPAREN LBRA linst RBRA
Rule 15    param -> param COMMA NAME
Rule 16    param -> NAME
Rule 17    paramcall -> paramcall COMMA expression
Rule 18    paramcall -> expression
Rule 19    main -> linst
Rule 20    linst -> linst statement SEMI
Rule 21    linst -> statement SEMI
Rule 22    linst -> linst controlStruct
Rule 23    linst -> controlStruct
Rule 24    linst -> controlStruct linst
Rule 25    linst -> linst expression SEMI
Rule 26    linst -> expression SEMI
Rule 27    linst -> linst return
Rule 28    linst -> return
Rule 29    controlStruct -> for
Rule 30    controlStruct -> while
Rule 31    controlStruct -> if
Rule 32    expression -> NAME LPAREN paramcall RPAREN
Rule 33    expression -> NAME LPAREN RPAREN
Rule 34    statement -> PRINT LPAREN expression RPAREN
Rule 35    for -> FOR LPAREN statement SEMI expression SEMI statement RPAREN LBRA linst RBRA
Rule 36    while -> WHILE LPAREN expression RPAREN LBRA linst RBRA
Rule 37    if -> IF LPAREN expression RPAREN LBRA linst RBRA
Rule 38    if -> IF LPAREN expression RPAREN LBRA linst RBRA ELSE LBRA linst RBRA
Rule 39    statement -> NAME EGAL expression
Rule 40    expression -> expression INF expression
Rule 41    expression -> expression INFEG expression
Rule 42    expression -> expression EGALEGAL expression
Rule 43    expression -> expression AND expression
Rule 44    expression -> expression OR expression
Rule 45    expression -> expression PLUS expression
Rule 46    expression -> expression TIMES expression
Rule 47    expression -> expression MINUS expression
Rule 48    expression -> expression DIVIDE expression
Rule 49    expression -> expression MODULO expression
Rule 50    expression -> expression SUP expression
Rule 51    expression -> expression SUPEG expression
Rule 52    expression -> expression INC
Rule 53    expression -> expression DEC
Rule 54    expression -> LPAREN expression RPAREN
Rule 55    expression -> NUMBER
Rule 56    expression -> NAME

Terminals, with rules where they appear

AND                  : 43
COMMA                : 15 17
DEC                  : 53
DIVIDE               : 48
EGAL                 : 39
EGALEGAL             : 42
ELSE                 : 38
FOR                  : 35
FUNCTIONDEF          : 13 14
IF                   : 37 38
INC                  : 52
INF                  : 40
INFEG                : 41
LBRA                 : 13 14 35 36 37 38 38
LPAREN               : 13 14 32 33 34 35 36 37 38 54
MINUS                : 47
MODULO               : 49
NAME                 : 13 14 15 16 32 33 39 56
NUMBER               : 55
OR                   : 44
PLUS                 : 45
PRINT                : 34
RBRA                 : 13 14 35 36 37 38 38
RETURN               : 9 10 11 12
RPAREN               : 13 14 32 33 34 35 36 37 38 54
SEMI                 : 9 10 20 21 25 26 35 35
SUP                  : 50
SUPEG                : 51
TIMES                : 46
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

controlStruct        : 22 23 24
expression           : 9 11 17 18 25 26 34 35 36 37 38 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53 54
for                  : 29
function             : 7 8
functions            : 2 2 3 4 6 7
if                   : 31
linst                : 13 14 19 20 22 24 25 27 35 36 37 38 38
main                 : 2 3 4 5
param                : 13 15
paramcall            : 17 32
prog                 : 1
return               : 27 28
start                : 0
statement            : 20 21 35 35
while                : 30

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . prog
    (2) prog -> . functions main functions
    (3) prog -> . functions main
    (4) prog -> . main functions
    (5) prog -> . main
    (6) prog -> . functions
    (7) functions -> . functions function
    (8) functions -> . function
    (19) main -> . linst
    (13) function -> . FUNCTIONDEF NAME LPAREN param RPAREN LBRA linst RBRA
    (14) function -> . FUNCTIONDEF NAME LPAREN RPAREN LBRA linst RBRA
    (20) linst -> . linst statement SEMI
    (21) linst -> . statement SEMI
    (22) linst -> . linst controlStruct
    (23) linst -> . controlStruct
    (24) linst -> . controlStruct linst
    (25) linst -> . linst expression SEMI
    (26) linst -> . expression SEMI
    (27) linst -> . linst return
    (28) linst -> . return
    (34) statement -> . PRINT LPAREN expression RPAREN
    (39) statement -> . NAME EGAL expression
    (29) controlStruct -> . for
    (30) controlStruct -> . while
    (31) controlStruct -> . if
    (11) expression -> . RETURN expression
    (12) expression -> . RETURN
    (32) expression -> . NAME LPAREN paramcall RPAREN
    (33) expression -> . NAME LPAREN RPAREN
    (40) expression -> . expression INF expression
    (41) expression -> . expression INFEG expression
    (42) expression -> . expression EGALEGAL expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression DIVIDE expression
    (49) expression -> . expression MODULO expression
    (50) expression -> . expression SUP expression
    (51) expression -> . expression SUPEG expression
    (52) expression -> . expression INC
    (53) expression -> . expression DEC
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . NUMBER
    (56) expression -> . NAME
    (9) return -> . RETURN expression SEMI
    (10) return -> . RETURN SEMI
    (35) for -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LBRA linst RBRA
    (36) while -> . WHILE LPAREN expression RPAREN LBRA linst RBRA
    (37) if -> . IF LPAREN expression RPAREN LBRA linst RBRA
    (38) if -> . IF LPAREN expression RPAREN LBRA linst RBRA ELSE LBRA linst RBRA

    FUNCTIONDEF     shift and go to state 7
    PRINT           shift and go to state 14
    NAME            shift and go to state 8
    RETURN          shift and go to state 18
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22

    start                          shift and go to state 1
    prog                           shift and go to state 2
    functions                      shift and go to state 3
    main                           shift and go to state 4
    function                       shift and go to state 5
    linst                          shift and go to state 6
    statement                      shift and go to state 10
    controlStruct                  shift and go to state 11
    expression                     shift and go to state 12
    return                         shift and go to state 13
    for                            shift and go to state 15
    while                          shift and go to state 16
    if                             shift and go to state 17

state 1

    (0) S' -> start .



state 2

    (1) start -> prog .

    $end            reduce using rule 1 (start -> prog .)


state 3

    (2) prog -> functions . main functions
    (3) prog -> functions . main
    (6) prog -> functions .
    (7) functions -> functions . function
    (19) main -> . linst
    (13) function -> . FUNCTIONDEF NAME LPAREN param RPAREN LBRA linst RBRA
    (14) function -> . FUNCTIONDEF NAME LPAREN RPAREN LBRA linst RBRA
    (20) linst -> . linst statement SEMI
    (21) linst -> . statement SEMI
    (22) linst -> . linst controlStruct
    (23) linst -> . controlStruct
    (24) linst -> . controlStruct linst
    (25) linst -> . linst expression SEMI
    (26) linst -> . expression SEMI
    (27) linst -> . linst return
    (28) linst -> . return
    (34) statement -> . PRINT LPAREN expression RPAREN
    (39) statement -> . NAME EGAL expression
    (29) controlStruct -> . for
    (30) controlStruct -> . while
    (31) controlStruct -> . if
    (11) expression -> . RETURN expression
    (12) expression -> . RETURN
    (32) expression -> . NAME LPAREN paramcall RPAREN
    (33) expression -> . NAME LPAREN RPAREN
    (40) expression -> . expression INF expression
    (41) expression -> . expression INFEG expression
    (42) expression -> . expression EGALEGAL expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression DIVIDE expression
    (49) expression -> . expression MODULO expression
    (50) expression -> . expression SUP expression
    (51) expression -> . expression SUPEG expression
    (52) expression -> . expression INC
    (53) expression -> . expression DEC
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . NUMBER
    (56) expression -> . NAME
    (9) return -> . RETURN expression SEMI
    (10) return -> . RETURN SEMI
    (35) for -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LBRA linst RBRA
    (36) while -> . WHILE LPAREN expression RPAREN LBRA linst RBRA
    (37) if -> . IF LPAREN expression RPAREN LBRA linst RBRA
    (38) if -> . IF LPAREN expression RPAREN LBRA linst RBRA ELSE LBRA linst RBRA

    $end            reduce using rule 6 (prog -> functions .)
    FUNCTIONDEF     shift and go to state 7
    PRINT           shift and go to state 14
    NAME            shift and go to state 8
    RETURN          shift and go to state 18
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22

    main                           shift and go to state 23
    function                       shift and go to state 24
    linst                          shift and go to state 6
    statement                      shift and go to state 10
    controlStruct                  shift and go to state 11
    expression                     shift and go to state 12
    return                         shift and go to state 13
    for                            shift and go to state 15
    while                          shift and go to state 16
    if                             shift and go to state 17

state 4

    (4) prog -> main . functions
    (5) prog -> main .
    (7) functions -> . functions function
    (8) functions -> . function
    (13) function -> . FUNCTIONDEF NAME LPAREN param RPAREN LBRA linst RBRA
    (14) function -> . FUNCTIONDEF NAME LPAREN RPAREN LBRA linst RBRA

    $end            reduce using rule 5 (prog -> main .)
    FUNCTIONDEF     shift and go to state 7

    functions                      shift and go to state 25
    function                       shift and go to state 5

state 5

    (8) functions -> function .

    FUNCTIONDEF     reduce using rule 8 (functions -> function .)
    PRINT           reduce using rule 8 (functions -> function .)
    NAME            reduce using rule 8 (functions -> function .)
    RETURN          reduce using rule 8 (functions -> function .)
    LPAREN          reduce using rule 8 (functions -> function .)
    NUMBER          reduce using rule 8 (functions -> function .)
    FOR             reduce using rule 8 (functions -> function .)
    WHILE           reduce using rule 8 (functions -> function .)
    IF              reduce using rule 8 (functions -> function .)
    $end            reduce using rule 8 (functions -> function .)


state 6

    (19) main -> linst .
    (20) linst -> linst . statement SEMI
    (22) linst -> linst . controlStruct
    (25) linst -> linst . expression SEMI
    (27) linst -> linst . return
    (34) statement -> . PRINT LPAREN expression RPAREN
    (39) statement -> . NAME EGAL expression
    (29) controlStruct -> . for
    (30) controlStruct -> . while
    (31) controlStruct -> . if
    (11) expression -> . RETURN expression
    (12) expression -> . RETURN
    (32) expression -> . NAME LPAREN paramcall RPAREN
    (33) expression -> . NAME LPAREN RPAREN
    (40) expression -> . expression INF expression
    (41) expression -> . expression INFEG expression
    (42) expression -> . expression EGALEGAL expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression DIVIDE expression
    (49) expression -> . expression MODULO expression
    (50) expression -> . expression SUP expression
    (51) expression -> . expression SUPEG expression
    (52) expression -> . expression INC
    (53) expression -> . expression DEC
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . NUMBER
    (56) expression -> . NAME
    (9) return -> . RETURN expression SEMI
    (10) return -> . RETURN SEMI
    (35) for -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LBRA linst RBRA
    (36) while -> . WHILE LPAREN expression RPAREN LBRA linst RBRA
    (37) if -> . IF LPAREN expression RPAREN LBRA linst RBRA
    (38) if -> . IF LPAREN expression RPAREN LBRA linst RBRA ELSE LBRA linst RBRA

    FUNCTIONDEF     reduce using rule 19 (main -> linst .)
    $end            reduce using rule 19 (main -> linst .)
    PRINT           shift and go to state 14
    NAME            shift and go to state 8
    RETURN          shift and go to state 18
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22

    statement                      shift and go to state 26
    controlStruct                  shift and go to state 27
    expression                     shift and go to state 28
    return                         shift and go to state 29
    for                            shift and go to state 15
    while                          shift and go to state 16
    if                             shift and go to state 17

state 7

    (13) function -> FUNCTIONDEF . NAME LPAREN param RPAREN LBRA linst RBRA
    (14) function -> FUNCTIONDEF . NAME LPAREN RPAREN LBRA linst RBRA

    NAME            shift and go to state 30


state 8

    (39) statement -> NAME . EGAL expression
    (32) expression -> NAME . LPAREN paramcall RPAREN
    (33) expression -> NAME . LPAREN RPAREN
    (56) expression -> NAME .

    EGAL            shift and go to state 31
    LPAREN          shift and go to state 32
    SEMI            reduce using rule 56 (expression -> NAME .)
    INF             reduce using rule 56 (expression -> NAME .)
    INFEG           reduce using rule 56 (expression -> NAME .)
    EGALEGAL        reduce using rule 56 (expression -> NAME .)
    AND             reduce using rule 56 (expression -> NAME .)
    OR              reduce using rule 56 (expression -> NAME .)
    PLUS            reduce using rule 56 (expression -> NAME .)
    TIMES           reduce using rule 56 (expression -> NAME .)
    MINUS           reduce using rule 56 (expression -> NAME .)
    DIVIDE          reduce using rule 56 (expression -> NAME .)
    MODULO          reduce using rule 56 (expression -> NAME .)
    SUP             reduce using rule 56 (expression -> NAME .)
    SUPEG           reduce using rule 56 (expression -> NAME .)
    INC             reduce using rule 56 (expression -> NAME .)
    DEC             reduce using rule 56 (expression -> NAME .)


state 9

    (54) expression -> LPAREN . expression RPAREN
    (11) expression -> . RETURN expression
    (12) expression -> . RETURN
    (32) expression -> . NAME LPAREN paramcall RPAREN
    (33) expression -> . NAME LPAREN RPAREN
    (40) expression -> . expression INF expression
    (41) expression -> . expression INFEG expression
    (42) expression -> . expression EGALEGAL expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression DIVIDE expression
    (49) expression -> . expression MODULO expression
    (50) expression -> . expression SUP expression
    (51) expression -> . expression SUPEG expression
    (52) expression -> . expression INC
    (53) expression -> . expression DEC
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . NUMBER
    (56) expression -> . NAME

    RETURN          shift and go to state 34
    NAME            shift and go to state 35
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 19

    expression                     shift and go to state 33

state 10

    (21) linst -> statement . SEMI

    SEMI            shift and go to state 36


state 11

    (23) linst -> controlStruct .
    (24) linst -> controlStruct . linst
    (20) linst -> . linst statement SEMI
    (21) linst -> . statement SEMI
    (22) linst -> . linst controlStruct
    (23) linst -> . controlStruct
    (24) linst -> . controlStruct linst
    (25) linst -> . linst expression SEMI
    (26) linst -> . expression SEMI
    (27) linst -> . linst return
    (28) linst -> . return
    (34) statement -> . PRINT LPAREN expression RPAREN
    (39) statement -> . NAME EGAL expression
    (29) controlStruct -> . for
    (30) controlStruct -> . while
    (31) controlStruct -> . if
    (11) expression -> . RETURN expression
    (12) expression -> . RETURN
    (32) expression -> . NAME LPAREN paramcall RPAREN
    (33) expression -> . NAME LPAREN RPAREN
    (40) expression -> . expression INF expression
    (41) expression -> . expression INFEG expression
    (42) expression -> . expression EGALEGAL expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression DIVIDE expression
    (49) expression -> . expression MODULO expression
    (50) expression -> . expression SUP expression
    (51) expression -> . expression SUPEG expression
    (52) expression -> . expression INC
    (53) expression -> . expression DEC
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . NUMBER
    (56) expression -> . NAME
    (9) return -> . RETURN expression SEMI
    (10) return -> . RETURN SEMI
    (35) for -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LBRA linst RBRA
    (36) while -> . WHILE LPAREN expression RPAREN LBRA linst RBRA
    (37) if -> . IF LPAREN expression RPAREN LBRA linst RBRA
    (38) if -> . IF LPAREN expression RPAREN LBRA linst RBRA ELSE LBRA linst RBRA

  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
    FUNCTIONDEF     reduce using rule 23 (linst -> controlStruct .)
    $end            reduce using rule 23 (linst -> controlStruct .)
    RBRA            reduce using rule 23 (linst -> controlStruct .)
    PRINT           shift and go to state 14
    NAME            shift and go to state 8
    RETURN          shift and go to state 18
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22

  ! PRINT           [ reduce using rule 23 (linst -> controlStruct .) ]
  ! NAME            [ reduce using rule 23 (linst -> controlStruct .) ]
  ! RETURN          [ reduce using rule 23 (linst -> controlStruct .) ]
  ! LPAREN          [ reduce using rule 23 (linst -> controlStruct .) ]
  ! NUMBER          [ reduce using rule 23 (linst -> controlStruct .) ]
  ! FOR             [ reduce using rule 23 (linst -> controlStruct .) ]
  ! WHILE           [ reduce using rule 23 (linst -> controlStruct .) ]
  ! IF              [ reduce using rule 23 (linst -> controlStruct .) ]

    controlStruct                  shift and go to state 11
    linst                          shift and go to state 37
    statement                      shift and go to state 10
    expression                     shift and go to state 12
    return                         shift and go to state 13
    for                            shift and go to state 15
    while                          shift and go to state 16
    if                             shift and go to state 17

state 12

    (26) linst -> expression . SEMI
    (40) expression -> expression . INF expression
    (41) expression -> expression . INFEG expression
    (42) expression -> expression . EGALEGAL expression
    (43) expression -> expression . AND expression
    (44) expression -> expression . OR expression
    (45) expression -> expression . PLUS expression
    (46) expression -> expression . TIMES expression
    (47) expression -> expression . MINUS expression
    (48) expression -> expression . DIVIDE expression
    (49) expression -> expression . MODULO expression
    (50) expression -> expression . SUP expression
    (51) expression -> expression . SUPEG expression
    (52) expression -> expression . INC
    (53) expression -> expression . DEC

    SEMI            shift and go to state 38
    INF             shift and go to state 39
    INFEG           shift and go to state 40
    EGALEGAL        shift and go to state 41
    AND             shift and go to state 42
    OR              shift and go to state 43
    PLUS            shift and go to state 44
    TIMES           shift and go to state 45
    MINUS           shift and go to state 46
    DIVIDE          shift and go to state 47
    MODULO          shift and go to state 48
    SUP             shift and go to state 49
    SUPEG           shift and go to state 50
    INC             shift and go to state 51
    DEC             shift and go to state 52


state 13

    (28) linst -> return .
